--- a/src/TestComponent/TestComponent.scss
+++ b/src/TestComponent/TestComponent.scss
@@ -1,5 +1,5 @@
-@import "../variables.scss";
-@import "../typography.scss";
+@import '../variables.scss';
+@import '../typography.scss';
 
 .test-component {
   background-color: $harvey-white;
